--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "dayjs": "^1.11.7",
     "openai": "^3.2.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "uuid": "^9.0.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0"
@@ -25,6 +27,7 @@
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
     "@types/node": "^12.20.21",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
