--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "openai": "^3.2.1",
     "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.6.0",
     "uuid": "^9.0.0",
     "vue": "^3.0.0",
