--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "dev:pwa": "quasar dev -m pwa",
+    "dev": "quasar dev -m pwa",
     "build": "quasar build -m pwa"
   },
   "dependencies": {
