--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,20 +1,37 @@
 name: Deploy
 
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ['main']
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: deploy
   cancel-in-progress: true
 
-on:
-  release:
-    types:
-      - "released"
-
 jobs:
-  build-and-deploy:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Install and Build
         uses: actions/setup-node@v2
         with:
@@ -28,10 +45,11 @@ jobs:
           for file in "${files[@]}"; do
             cp dist/pwa/index.html dist/pwa/${file}.html
           done
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          ACCESS_TOKEN: ${{ secrets.JINA_DEV_BOT}}
-          BRANCH: gh-pages
-          FOLDER: dist/pwa
-          CLEAN: true
+          # Upload entire repository
+          path: dist/pwa
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
